--- a/Invasives/database_prep.ipynb
+++ b/Invasives/database_prep.ipynb
@@ -306,6 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "bfe1ef08",
    "metadata": {},
    "outputs": [
     {
@@ -86148,6 +86149,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
+   "id": "c478c562",
    "metadata": {},
    "outputs": [
     {
@@ -86525,7 +86527,8 @@
    "hash": "ceaf2a5da3b9fb120ced6d6b08d24fecc9476c71a8e8bf35a71dc83533c4fc77"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.8 64-bit ('base': conda)",
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -86538,7 +86541,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
