updated plants db, continued explore

--- a/Invasives/USDA_PLANT_get.ipynb
+++ b/Invasives/USDA_PLANT_get.ipynb
@@ -72,12 +72,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ed70c13c-1d2c-4420-8c4e-8a596af0dc1e",
+   "metadata": {},
+   "source": [
+    "## NOTES"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eedb3577-20ff-44f7-8a83-2fa214377743",
+   "metadata": {},
+   "source": [
+    "#### Noxious weeds have the ability to spread rapidly, cause severe crop losses and economic hardship. This weed designation is a regulatory support for a containment stage of invasive plant management.\n",
+    "\n",
+    "\n",
+    "#### If a plant is found to probably be \"troublesome, aggressive, intrusive, detrimental, or destructive to agriculture, silviculture, or important native species, and difficult to control or eradicate\", the Department will designate the plant as a noxious weed. (source: CDFA.ca.gov)\n",
+    "\n",
+    "#### "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27ce1adf-213b-45e3-bb89-69deab0b26dd",
+   "metadata": {},
+   "source": [
+    "## CODES"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05c877e0-40b9-4254-bcc2-0ce50e0e58bc",
+   "id": "9382188d-b72b-4d5a-8f9d-9f355b028ec8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "### NATIVE STATUS\n",
+    "#### L48 = species is native to the lower 48 states\n",
+    "#### Per USDA PLANTS Database, \"native\" if their L48 native status was listed as N, N?, NI, or NI?  \n",
+    "#### Per USDA PLANTS Database, \"exotic\" if their L48 native status was listed as GP, GP?, I, I?, N?I, W, or W?. \n",
+    "#### See http://plants.usda.gov/about_adv_search.html for descriptions of these terms."
+   ]
   }
  ],
  "metadata": {
