--- a/PLANTS.ipynb
+++ b/PLANTS.ipynb
@@ -3105,9 +3105,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit ('pythondata': conda)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python3810jvsc74a57bd026e1a0b21b15c6599720c0dcf6980bb4cd2e7bcd1c97af6c7222f42e9b7eda95"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3119,7 +3119,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
