--- a/PLANTS_ML.ipynb
+++ b/PLANTS_ML.ipynb
@@ -2108,10 +2108,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "id": "db58c98e-aa4b-42d7-8aa3-509ee87d500d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-0c31fa5f41f2>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m df_core = pd.DataFrame(df, columns = [\n\u001b[0m\u001b[0;32m      2\u001b[0m  \u001b[1;34m'Accepted_Symbol_x'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m  \u001b[1;34m'Hybrid_Genus_Indicator'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m  \u001b[1;34m'Hybrid_Species_Indicator'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m  \u001b[1;34m'Species'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
+    }
+   ],
    "source": [
     "df_core = pd.DataFrame(df, columns = [\n",
     " 'Accepted_Symbol_x',\n",
@@ -2851,7 +2863,8 @@
    "outputs": [],
    "source": [
     "# function to id 'NC' state code in super string\n",
-    "def in_nc(string):\n",
+    "\n",
+    "def in_state(string):\n",
     "        if string.find('NC') == -1:\n",
     "            return False\n",
     "        else:\n",
@@ -2984,9 +2997,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit ('pythondata': conda)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python3810jvsc74a57bd026e1a0b21b15c6599720c0dcf6980bb4cd2e7bcd1c97af6c7222f42e9b7eda95"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2998,7 +3011,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
